adding in Ref B suggestions to abstract, etc

--- a/paper/submission/ZW10157-response-1.tex
+++ b/paper/submission/ZW10157-response-1.tex
@@ -229,14 +229,18 @@ framework for simulation-based multi-objective optimization methods
 that allows the automatic investigation of optimal sets of machine
 parameters. The implementation is based on a master/slave paradigm,
 employing several masters that govern a set of slaves executing
-simulations and performing optimization tasks. -> In this paper, we
+simulations and performing optimization tasks. $->$ In this paper, we
 present a general-purpose framework for simulation-based
 multi-objective optimization methods that allows the automatic
 investigation of optimal sets of machine parameters.
 
+{\bf Our Response:} {\color{blue} The suggested edit above has been incorporated into the updated manuscript. }
+
 The high charge beam line at the Argonne Wakefield Accelerator
 Facility was used as the beam dynamics model. The 3D beam size,
-transverse momentum, and energy spread were optimized. Please state
+transverse momentum, and energy spread were optimized. 
+
+Please state
 the significance of the optimization. Is the solution found better
 than the original design? Then provide a comparison with the baseline
 solution as Bazarov and Sinclair did in their 2005 paper. Is it the
@@ -244,28 +248,27 @@ first such solution for the AWA? Then make that clear. Has this
 solution been used in the machine? Then provide a comparison between
 prediction and operational experience.
 
-Section I
-
-line 35: trade of -$>$ trade off
+Section I, line 35: trade of -$>$ trade off
 
 {\bf Our response:} {\color{blue} This typo is corrected in the updated manuscript.}
 
-Section II
-
+Section II:
 lines 53-74. The car example is from Deb’s book but not cited. This
 example can probably be removed as EA/GA methodology is established
 practice now.
 
-Section III
+{\bf Our response:} {\color{blue} This example has been removed.}
 
-subsection A
-
+Section III, subsection A:
 Needs to be updated to reflect developments in accelerator physics.
 
-subsections B-F
+{\bf Our response:} {\color{blue} XXX}
 
+subsections B-F:
 Replace with a brief overview and put the details in Supplemental
 Material
+
+{\bf Our response: } {\color{blue} XXX}
 
 Section VI: 
 Code and input file details should be in Supplemental Material
