more small edits to review response 1

--- a/paper/submission/ZW10157-response-1.tex
+++ b/paper/submission/ZW10157-response-1.tex
@@ -65,9 +65,7 @@ journal so the physics context for the application needs to be clear.
 
 {\bf REFEREE B (Remarks to Author)}
 
-First, optimization systems based on PISA have been in use in
-accelerator design since 2005, and NSGA-II’s use dates from that time
-too. References to early PISA-based systems and NSGAII applications
+References to early PISA-based systems and NSGAII applications
 are missing from the authors’ reference list, and the authors must
 correct this. Three groups of references are provided to assist in
 addressing these omissions: 1) early PISAbased systems; 2) a small
@@ -76,17 +74,42 @@ more as the NSGA-II algorithm is easy to understand and fairly
 straight forward to implement); and 3) a survey of accelerator physics
 and genetic and evolutionary application usage as of 2013.
 
+{\bf Our response:} {\color{blue} We agree that some references of import were missing and should have been included.
+	Especially the following: 
+	
+	I.V. Bazarov and C.K. Sinclair. "Multivariate optimization of a high
+	brightness dc gun photoinjector," Phys. Rev. ST Accel. Beams 8,
+	034202, 2005
+	
+	A. Hofler et al., "Innovative applications of genetic algorithms to
+	problems in accelerator physics", Phys. Rev. ST Accel. Beams 16,
+	010101, 2013
+	
+	We thank the reviewer for the list of references. 
+	References described or referenced by A. Hofler in the above were excluded from 
+	the bibliography. 
+}
+
+
 1) References for 4 PISA-based optimization systems:
+
+{\color{blue}{Included in updated bib:}}
+
 
 I.V. Bazarov and C.K. Sinclair. "Multivariate optimization of a high
 brightness dc gun photoinjector," Phys. Rev. ST Accel. Beams 8,
 034202, 2005
 
+
+
+{\color{blue}{Exluded from bib, because  they are in A. Hofler 13':}}
+
+A. Hofler et al. "Optimizing SRF Gun Cavity Profiles in a Genetic
+Algorithm Framework," ICAP09, San Francisco, 2009, THPSC020 
+
 Y.C. Chao et al. "TRIUMF-VECC Electron Linac Beam Dynamics
 Optimization," ICAP09, San Francisco, 2009, THPSC012
 
-A. Hofler et al. "Optimizing SRF Gun Cavity Profiles in a Genetic
-Algorithm Framework," ICAP09, San Francisco, 2009, THPSC020
 
 M. Marchetto et al. "Beam Dynamics Optimization of the TRIUMF ELINAC
 Injector," PAC09, Vancouver, BC, Canada, 2009, TH6PFP097
@@ -142,29 +165,10 @@ Pulsar Physics. General Particle Tracer, http://www.pulsar.nl/gpt
 Physics: A. Hofler. “Genetic Algorithms and Their Applications in
 Accelerator Physics,” NAPAC2013, Pasadena, CA, USA, 2013, THTB1
 
-{\bf Our response:} {\color{blue} We agree that some references of import were missing and should have been included.
-Especially, the following: 
-
-I.V. Bazarov and C.K. Sinclair. "Multivariate optimization of a high
-brightness dc gun photoinjector," Phys. Rev. ST Accel. Beams 8,
-034202, 2005
-
-A. Hofler et al., "Innovative applications of genetic algorithms to
-problems in accelerator physics", Phys. Rev. ST Accel. Beams 16,
-010101, 2013
-
-
-}
 
 
 
 
-
-Second, due to the thoroughness and success of Bazarov and Sinclair’s
-optimization (PRSTAB 2005 provided above), genetic and evolutionary
-algorithm-based optimizations are standard practice in accelerator
-design, and researchers are now looking at ways to use machine
-learning and AI techniques in accelerator design and optimization.
 Manual parameter scans, as mentioned in Section I lines 17-19, are
 useful, but they are by no means the sole optimization technique in
 use today. The statement made in lines 17-19 was true prior to 2005
