add suggestions for 2 answers

--- a/paper/submission/ZW10157-response-1.tex
+++ b/paper/submission/ZW10157-response-1.tex
@@ -59,7 +59,11 @@ component of physics that come into play in the beam squeeze, whatever
 they are – space charge, etc. After all, this is primarily a physics
 journal so the physics context for the application needs to be clear.
 
-{\bf Our response:} {\color{blue} XXXXX.}
+{\bf Our response:} {\color{red} The AWA is a high charge charge accelerator. The strong non-linearities
+justifying the full 3D approach. At the same time AWA is a facility where many different accelerator research experiments take
+place. Therefore it is very desirable, and was one of the important research objectives, to come up with a precise, e.g. 3D
+model embedded into a multi-objective optimisation framework. The OPAL framework, differentiates itself, being massively paralle,
+full 3D and, and simple to use i.e.\ user friendly.}
 
 
 
@@ -176,9 +180,16 @@ but not now. The authors should consider providing a different and
 more compelling motivator to encourage users to consider the system
 they have developed.
 
-{\bf Our response:} {\color{blue} XXXXX.}
+{\bf Our response:} {\color{red} The statements on the lines  17-19 of our initial submission are misleading, as
+the referee correctly recognised. We replace them with the following:  
 
-Third, several of the features of this system are available is
+Despite the great success of on-line models, and various model dependent and model independent tuning and 
+optimisation techniques, in research facilities such as AWA empirical tuning is still one of the methods used. Due to the 
+non-linear problem mainly from space charge, simple and fast models are applicable only in a very 
+restricted manner. When it comes to multi-objective optimisation then the situation is even more complicated.
+}
+
+Third, several of the features of this system are available in
 existing systems but are not acknowledged:
 
 - parallel/distributed computation: the survey article mentioned above
