add an other suggestions for an answer

--- a/paper/submission/ZW10157-response-1.tex
+++ b/paper/submission/ZW10157-response-1.tex
@@ -283,7 +283,10 @@ subsections B-F:
 Replace with a brief overview and put the details in Supplemental
 Material
 
-{\bf Our response: } {\color{blue} XXX}
+{\bf Our response: } {\color{red} This section has being shortened. However we would like to 
+leave the existing description, in order to drive home the fact that the framework can be 
+easily extended with other optimisation algorithms. Something that you can not find in most of the 
+existing codes.}
 
 Section VI: 
 Code and input file details should be in Supplemental Material
