--- a/paper/submission/paper.bib
+++ b/paper/submission/paper.bib
@@ -1,3 +1,25 @@
+@article{hofler13,
+	author         = "Hofler, Alicia and Terzic, Balsa and Kramer, Matthew and
+	Zvezdin, Anton and Morozov, Vasiliy and Roblin, Yves and
+	Lin, Fanglei and Jarvis, Colin",
+	title          = "{Innovative applications of genetic algorithms to
+	problems in accelerator physics}",
+	journal        = "Phys. Rev. ST Accel. Beams",
+	volume         = "16",
+	year           = "2013",
+	number         = "1",
+	pages          = "010101",
+	doi            = "10.1103/PhysRevSTAB.16.010101",
+	reportNumber   = "JLAB-ACO-12-1649",
+	SLACcitation   = "%%CITATION = PRSTA,16,010101;%%"
+}
+
+@misc{gpt,
+	title =	 "{General Particle Tracer (GPT}",
+	author = "Pulsar Physics"
+	note =	 "\url{http://www.pulsar.nl/gpt}"
+}
+
 @article{ARBENZ2008381,
 	author =       "P. Arbenz and O. Chinellato",
 	title =        "On Solving Complex-Symmetric Eigenvalue Problems
@@ -12,7 +34,7 @@
 
 
 
-@article{PETSeq,
+@article{pets,
     title = {Design and testing of a 7.8 GHz power extractor using a cylindrical dielectric-loaded waveguide},
     author = {Gao, F. and Conde, M. E. and Gai, W. and Jing, C. and Konecny, R. and Liu, W. and Power, J. G. and Wong, T. and Yusof, Z.},
     journal = {Phys. Rev. ST Accel. Beams},
@@ -37,7 +59,7 @@
 @techreport{borl:00,
   title={Elegant: A flexible SDDS-compliant code for accelerator simulation},
   author={Borland, M.},
-  year={2000},
+  year={2000-2018},
   institution={Argonne National Lab., IL (US)}
 }
 
@@ -487,7 +509,7 @@ language={English}
     year = {2004}
 }
 
-@article{bais:05,
+@article{bazarov05,
   title = {Multivariate optimization of a high brightness dc gun photoinjector},
   author = {Bazarov, Ivan V. and Sinclair, Charles K.},
   journal = {Phys. Rev. ST Accel. Beams},
