more edits to response 1

--- a/paper/submission/ZW10157-response-1.tex
+++ b/paper/submission/ZW10157-response-1.tex
@@ -293,13 +293,13 @@ practice now.
 Section III, subsection A:
 Needs to be updated to reflect developments in accelerator physics.
 
-{\bf Our response:} {\color{blue} XXX}
+{\bf Our response:} {\color{blue} New references were added to address this.}
 
 subsections B-F:
 Replace with a brief overview and put the details in Supplemental
 Material
 
-{\bf Our response: } {\color{red} This section has been shortened. However we would like to 
+{\bf Our response: } {\color{blue} This section has been shortened. However we would like to 
 leave the existing description, in order to drive home the fact that the framework can be 
 easily extended with other optimization algorithms. Something that you can not find in most of the 
 existing codes.}
