adding some of linda's edits to response.

--- a/paper/submission/ZW10157-response-1.tex
+++ b/paper/submission/ZW10157-response-1.tex
@@ -16,7 +16,7 @@ Dear reviewers and editors,
 
 Thank you for considering the manuscript.
 We appreciate the constructive criticism. 
-It helped improve the quality of this manuscript.
+It helped improve the quality of the manuscript.
 
 We have carefully answered all your questions and implemented your suggestions to the best of our knowledge.
 The details can be found in the following pages.
@@ -62,14 +62,27 @@ journal so the physics context for the application needs to be clear.
 
 {\bf Our response:} {\color{blue} 
 	To address this concern, the following was added on lines XX-XX in the updated manuscript:
-	The AWA facility operates at both low and high charge charge (up to 100 nC). Strong non-linearities
-at high charge justify using a full 3D space charge approach. Finding optics solutions in this regime and 
-with the tight aperture constraints specific to two beam acceleration at the AWA is not trivial.  
+	
 
-At the same time, AWA is a facility where many different accelerator research experiments take
-place. Therefore it is very desirable, and was an important research objective, to develop a precise, e.g. 3D
-model embedded into a multi-objective optimization framework. In this way, optimization of various 
-machine configurations can be done at different charge levels. While other codes such as GPT  and ELEGANT, also have integrated genetic optimization algorithms; the OPAL framework, differentiates itself by being open source (i.e. free to use), massively parallel, and fully 3D.
+A hallmark of the AWA facility is the flexibility to swap physical
+components in the beamlines, which enables different, often novel,
+accelerator research experiments to take place.  Not only do the
+physical machine components change, the beam characteristics also vary
+considerably to meet different needs.  The facility operates at both low
+and high charge (up to 100 nC), and at high charge strong nonlinearities
+require a full 3D space charge approach in simulations for modeling.  
+Finding optics solutions in this regime, especially when
+there are additional constraints such as the small aperture two-beam
+accelerating structures, is challenging even without the quick
+turnaround of the beamline configurations.  Therefore, it has been an
+important research objective to develop a precise, e.g. 3D model
+embedded into a multi-objective optimization framework that may be used
+as a flexible platform for optimization of changing machine
+configurations operated at different charge levels. While other codes
+such as GPT [updated ref here] and ELEGANT [updated ref here], also have
+integrated genetic optimization algorithms; the OPAL framework,
+differentiates itself by being open source (i.e. free to use), massively
+parallel, and fully 3D.
 }
 
 
