--- a/paper/submission/theor-experiment.tex
+++ b/paper/submission/theor-experiment.tex
@@ -272,7 +272,6 @@ see Fig.~\ref{awa-tba}.
 The objectives include: $\varepsilon_{x}\left(s = s_1\right)\text{, } \varepsilon_{x}\left(s = s_2\right)$, $\text{rms}_{s}\left(s = s_1\right)\text{, and }  \text{rms}_{s}\left(s = s_2\right)$. 
 The OPAL input file for ex-3, and subsequent optimization runs in this paper, can be found at in following repository: 
 \url{https://github.com/nneveu/awa-tba}.
-%is given as an example to show how optimization and design variables are defined:
 
 After collection of the data for all four experiments, several metrics
 were compared, including number of generations completed in twenty four hours and
@@ -298,15 +297,12 @@ the hyper parameters in ex-4 were chosen as the default values for subsequent ru
 		\centering
 		\includegraphics[width=\textwidth]{figures/ex-pareto1-paperedit}
 		(a) Pareto fronts for ex-1 through ex-4 at $s_1$.
-		%\caption{(a) Pareto fronts at $s_1$.}
-		%\label{expareto1}
 		%\vspace{2em}
 	\end{minipage}
 	\begin{minipage}{0.49\textwidth}
 		\centering
 		\includegraphics[width=\textwidth]{figures/ex-pareto2-paperedit}
 		(b) Pareto fronts for ex-1 through ex-4 at $s_2$.
-		%\caption{(b) Pareto fronts at $s_2$.}
 		%\label{expareto2}
 	\end{minipage}
 	\caption{Comparison of Pareto fronts for initial optimization experiments, ex-1 through ex-4.}
@@ -371,10 +367,8 @@ Equations (\ref{eq:awa:firstconstr}) to
 laser radius, gun phase, and linac cavity phases (in that order). 
 These are parameters in the simulation 
 that must be defined, but do not vary during the optimization.
-%\vspace{-1em}
-The AWA 
-design variables, objectives, and constraints in the OPAL input file as shown in
-the following code: %equations (\ref{eq:awa:p1}) to (\ref{eq:awa:lastdvar}). 
+The AWA design variables, objectives, and constraints in the OPAL input file as shown in
+the repository.
 %\vspace{0.2cm}
 
 
